src/objects/Signal__c.object
<CustomObject>
    <description>IQVIA-PSA-MC-3417</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Signals</relationshipLabel>
        <relationshipName>Signals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_s_Taken_or_Planned__c</fullName>
        <description>IQVIAPSA-MC-3415: Custom signal ui</description>
        <label>Action(s) Taken or Planned*</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Evaluation Ongoing</fullName>
                </value>
                <value>
                    <fullName>Safety Communication to Target Audience (DHPC, Letter to Investigators, EC, DHCP)</fullName>
                </value>
                <value>
                    <fullName>PASS</fullName>
                </value>
                <value>
                    <fullName>Close Monitoring</fullName>
                </value>
                <value>
                    <fullName>Update Clinical log Documents (IB, ICF, Protocol)</fullName>
                </value>
                <value>
                    <fullName>Urgent Risk Minimization Measures (Specify)</fullName>
                </value>
                <value>
                    <fullName>Update RSI (CCDS, local SmPC)</fullName>
                </value>
                <value>
                    <fullName>Additional Risk Minimization Measures (Specify)</fullName>
                </value>
                <value>
                    <fullName>Other (Specify)</fullName>
                </value>
                <value>
                    <fullName>Monitoring via Routine Pharmacovigilance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_RMM_Specify__c</fullName>
        <description>IQVIAPSA-MC-3837</description>
        <inlineHelpText>Additional Risk Minimization Measures (Specify)</inlineHelpText>
        <label>Additional RMM (Specify)</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_BRM_Review_Completed_SER__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Date BRM Review Completed (SER)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_BRM_Review_Completed_SVF__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Date BRM Review Completed (SVF)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Closed_Evaluation_Completed__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Date Closed (Evaluation Completed)*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Detected__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Date Detected*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Medical_Review_Completed_SER__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Date Medical Review Completed (SER)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Medical_Review_Completed_SVF__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Date Medical Review Completed (SVF)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_QC_Completed_SER__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Date QC Completed (SER)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_QC_Completed_SVF__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Date QC Completed (SVF)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SER_Draft_Sent_for_QC__c</fullName>
        <description>IQVIAPSA-6574</description>
        <label>Date SER Draft Sent for QC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SER_Draft_sent_for_Medical_Review__c</fullName>
        <description>IQVIAPSA-6575</description>
        <label>Date SER Draft sent for Medical Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SER_Final_DraftReady_for_SMT_Review__c</fullName>
        <description>IQVIAPSA-6575</description>
        <label>Date SER Final DraftReady for SMT Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SVF_Draft_Sent_for_QC__c</fullName>
        <description>IQVIAPSA-6569</description>
        <label>Date SVF Draft Sent for QC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SVF_Draft_sent_for_Medical_Review__c</fullName>
        <description>IQVIAPSA-6570</description>
        <label>Date SVF Draft sent for Medical Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SVF_Final_DraftReady_for_SMT_Review__c</fullName>
        <description>IQVIAPSA-6570</description>
        <label>Date SVF Final DraftReady for SMT Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Describe_Func_Resp_for_Impl_of_Action__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <inlineHelpText>Describe Function(s) Responsible for Implementation of Actions and where/how Completion of Actions will be Tracked</inlineHelpText>
        <label>Describe Func Resp. for Impl. of Action</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detected_By_New__c</fullName>
        <description>IQVIAPSA-MC-3415</description>
        <label>Detected By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IQVIA</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_this_SER_require_Medical_Review__c</fullName>
        <description>IQVIAPSA-4781</description>
        <label>Does this SER require Medical Review?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_this_SER_require_QC__c</fullName>
        <description>IQVIAPSA-4781</description>
        <label>Does this SER require QC?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_this_SVF_require_Medical_Review__c</fullName>
        <description>IQVIAPSA-4781</description>
        <label>Does this SVF require Medical Review?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_this_SVF_require_QC__c</fullName>
        <description>IQVIAPSA-4781</description>
        <label>Does this SVF require QC?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dt_Transfer_of_Resp_for_Impl_of_Actions__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <inlineHelpText>Date Transfer of Responsibility for Implementation of Actions</inlineHelpText>
        <label>Dt Transfer of Resp for Impl. of Actions</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evaluation_Due_Date__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Evaluation Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Further_Actions_Implemented_Specify__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Further Actions Implemented (Specify)</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Further_Actions_to_be_Implemented__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Further Actions to be Implemented</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes_specify_with_free_text</fullName>
                    <label>Yes (specify with free text)</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Further_Tracked_as_a_Topic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Further Tracked as a Topic</label>
        <referenceTo>Topics_of_Interest__c</referenceTo>
        <relationshipLabel>Signals</relationshipLabel>
        <relationshipName>Signals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incl_Signal_Eval_in_Metrics_Invoices__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Incl. Signal Eval.in Metrics/Invoices?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No (Specify Reason)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incl_Signal_Val_in_Metrics_Invoices__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Incl. Signal Val in Metrics/Invoices?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No (Specify Reason)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Communication_Signal_Overview__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Internal Communication-Signal Overview</label>
        <length>6000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>IQVIAPSA-MC-3415</description>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Methods_of_Signal_Evaluation__c</fullName>
        <description>IQVIAPSA-MC-3415: Custom signal UI</description>
        <label>Methods of Signal Evaluation*</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PBRER/PSUR</fullName>
                </value>
                <value>
                    <fullName>RMP</fullName>
                </value>
                <value>
                    <fullName>Response to Health Authorities</fullName>
                </value>
                <value>
                    <fullName>Signal Evaluation Report</fullName>
                </value>
                <value>
                    <fullName>Other (Specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>6000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Action_s_Taken_Planned_Specify__c</fullName>
        <description>IQVIAPSA-MC-3837</description>
        <label>Other Action(s) Taken/Planned (Specify)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Methods_of_Signal_Eval_Specify__c</fullName>
        <description>IQVIAPSA-MC-3837</description>
        <label>Other Methods of Signal Eval. (Specify)</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Trigger_Specify__c</fullName>
        <description>IQVIAPSA-MC-3415</description>
        <label>Other Trigger (Specify)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Specify__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Partner (Specify)</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Target__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>RDS Product Line</value>
            </filterItems>
            <filterItems>
                <field>Target__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Target__c</referenceTo>
        <relationshipLabel>Signals</relationshipLabel>
        <relationshipName>Signals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Project Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIAPSA-MC-3189: As a SM user I can create/edit new Signals identified during SM project related metadata which are linked to the project and can be linked to a Signal Detection Run</description>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Signals</relationshipLabel>
        <relationshipName>Signals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_Signal_Evl_not_in_Metric_Invoice__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <inlineHelpText>Reason Signal Evaluation not included in Metrics/Invoices (Specify).</inlineHelpText>
        <label>Reason Signal Evl not in Metric/Invoice</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_Signal_Not_Validated__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Reason Signal Not Validated</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_Signal_Val_not_in_Metric_Invoices__c</fullName>
        <description>IQVIAPSA-MC-3837</description>
        <inlineHelpText>Reason Signal Validation not included in Metrics/Invoices (Specify).</inlineHelpText>
        <label>Reason Signal Val not in Metric/Invoices</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Evaluation__c</fullName>
        <description>IQVIA-PSA-MC-3147</description>
        <inlineHelpText>Reason for Evaluation &amp; Summary of Key Data</inlineHelpText>
        <label>Reason for Evaluation*</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_urgent_RMM_Specify__c</fullName>
        <description>IQVIAPSA-MC-3837</description>
        <inlineHelpText>Reason for urgent Risk Minimization Measures (Specify)</inlineHelpText>
        <label>Reason for urgent RMM (Specify)</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Routine_Signal_Detection_Specify__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Routine Signal Detection (Specify)</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SD_RUN_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIAPSA-MC-3415: Create custom UI for Signal</description>
        <label>SD RUN ID</label>
        <referenceTo>SD_Runs__c</referenceTo>
        <relationshipLabel>Signals</relationshipLabel>
        <relationshipName>Signals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SD_Run_Unique_ID__c</fullName>
        <formula>LEFT( SD_RUN_ID__r.SD_Run_Unique_ID__c ,3)+RIGHT(SD_RUN_ID__r.SD_Run_Unique_ID__c,9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SD RUN ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SER_BRM_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIA-PSA-MC-3417</description>
        <label>SER BRM Analyst</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Signals (BRM Analyst 2)</relationshipLabel>
        <relationshipName>Signals9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SER_Complexity__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>SER Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Complex</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SER_Medical_Safety_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIA-PSA-MC-3417</description>
        <label>SER Medical Safety Advisor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Signals (Medical Safety Advisor 2)</relationshipLabel>
        <relationshipName>Signals12</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SER_SM_QC_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIA-PSA-MC-3417</description>
        <label>SER SM QC Reviewer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Signals (SM QC Reviewer 2)</relationshipLabel>
        <relationshipName>Signals13</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SER_SM_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIA-PSA-MC-3417</description>
        <label>SER SM Specialist</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Signals (SM Specialist)</relationshipLabel>
        <relationshipName>Signals11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SM_Service_Line_Lead_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIAPSA-MC-3415</description>
        <label>SM Service Line Lead</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Signals (SM Service Line Lead)</relationshipLabel>
        <relationshipName>Signals17</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SM_Specialist_Current_User__c</fullName>
        <description>IQVIAPSA-3948</description>
        <formula>OR(IF(SVF_SM_Specialist__r.Salesforce_User__c = $User.Id, True, False),IF( SER_SM_Specialist__r.Salesforce_User__c = $User.Id, True, False))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SM Specialist = Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVF_BRM_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIA-PSA-MC-3417</description>
        <label>SVF BRM Analyst</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Signals (BRM Analyst)</relationshipLabel>
        <relationshipName>Signals10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVF_Medical_Safety_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIA-PSA-MC-3417</description>
        <label>SVF Medical Safety Advisor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Signals (Medical Safety Advisor)</relationshipLabel>
        <relationshipName>Signals14</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVF_SM_QC_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIA-PSA-MC-3417</description>
        <label>SVF SM QC Reviewer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Signals (SM QC Reviewer)</relationshipLabel>
        <relationshipName>Signals15</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVF_SM_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIA-PSA-MC-3417</description>
        <label>SVF SM Specialist</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Signals (SM Scientist)</relationshipLabel>
        <relationshipName>Signals16</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sd_Run__c</fullName>
        <formula>IF(SD_RUN_ID__c != null, HYPERLINK(&quot;/&quot;+SD_RUN_ID__c, LEFT( SD_RUN_ID__r.SD_Run_Unique_ID__c ,3)
+RIGHT(SD_RUN_ID__r.SD_Run_Unique_ID__c,9)) , null)</formula>
        <label>SD RUN ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signal_Document_Link__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Signal Document Link</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Signal_Document_Name__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Signal Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signal_Evaluation_Outcome__c</fullName>
        <description>IQVIAPSA-MC-3415: Custom signal UI</description>
        <label>Signal Evaluation Outcome</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Identified Risk (not important)</fullName>
                </value>
                <value>
                    <fullName>Important Identified Risk</fullName>
                </value>
                <value>
                    <fullName>Potential Risk (not important)</fullName>
                </value>
                <value>
                    <fullName>Important Potential Risk</fullName>
                </value>
                <value>
                    <fullName>Signal Refuted</fullName>
                </value>
                <value>
                    <fullName>Not communicated by Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signal_Evaluation_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Signal Evaluation Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signal_ID__c</fullName>
        <description>IQVIAPSA-MC-3415: Create UI for Signal (custom)</description>
        <formula>HYPERLINK(&quot;/?sort=&quot;&amp; Signal_Unique_ID__c,&quot;&quot;) &amp; HYPERLINK(&quot;/lightning/r/Signal__c/&quot; &amp; Id &amp;&quot;/view&quot;, LEFT(Signal_Unique_ID__c,3)+RIGHT(Signal_Unique_ID__c,13))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signal_Management_Step__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Signal Management Step</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Signal Detection</fullName>
                </value>
                <value>
                    <fullName>Signal Validation</fullName>
                </value>
                <value>
                    <fullName>Signal Evaluation</fullName>
                </value>
                <value>
                    <fullName>Risk Minimization Measures</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signal_Prioritization_Category__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Signal Prioritization Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signal_Prioritization_Custom_Specify__c</fullName>
        <description>IQVIAPSA-MC-3415</description>
        <label>Signal Prioritization Custom (Specify)</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Signal_Refuted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Signal Refuted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signal_Status__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Signal Status*</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To Be Validated</fullName>
                    <default>true</default>
                    <label>To Be Validated</label>
                </value>
                <value>
                    <fullName>Not Validated</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signal_Term__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Signal Term*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signal_Unique_ID__c</fullName>
        <description>IQVIPSA-MC-4386</description>
        <label>Signal Unique ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Signal_Validation_Complexity__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Signal Validation Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Complex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_or_Trigger_of_Signal__c</fullName>
        <description>IQVIAPSA-MC-3415: Signal Custom UI</description>
        <label>Source or Trigger of Signal*</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical Trial Data</fullName>
                </value>
                <value>
                    <fullName>Index Case</fullName>
                </value>
                <value>
                    <fullName>FAERS</fullName>
                </value>
                <value>
                    <fullName>VAERS</fullName>
                </value>
                <value>
                    <fullName>GUDID</fullName>
                </value>
                <value>
                    <fullName>Literature Article</fullName>
                </value>
                <value>
                    <fullName>VigiBase</fullName>
                </value>
                <value>
                    <fullName>Spontaneous Reports</fullName>
                </value>
                <value>
                    <fullName>EudraVigilance</fullName>
                </value>
                <value>
                    <fullName>Pre-Clinical Data</fullName>
                </value>
                <value>
                    <fullName>Emerging Safety Issue</fullName>
                </value>
                <value>
                    <fullName>Routine Signal Detection (Specify)</fullName>
                </value>
                <value>
                    <fullName>Other (Specify)</fullName>
                </value>
                <value>
                    <fullName>Partner (Specify)</fullName>
                </value>
                <value>
                    <fullName>Health Authority</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specify_Routine_SD__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Specify Routine SD</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Spontaneous_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Spontaneous Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Clinical_log_Doc_IB_ICF_Protocol__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Update Clinical log Doc(IB;ICF,Protocol)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_RSI_CCDS_local_SmPC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Update RSI (CCDS, local SmPC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Urgent_Risk_Minimization_Measures_Spec__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Urgent Risk Minimization Measures(Spec)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VAERS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IQVIA-PSA-MC-3417</description>
        <label>VAERS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validation_Date__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Validation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Validation_Due_Date__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Validation Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Validation_Outcome__c</fullName>
        <description>IQVIA-PSA-MC-3417</description>
        <label>Validation Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signal Not Validated(Specify Reason)</fullName>
                    <label>Signal Not Validated (Specify Reason)</label>
                </value>
                <value>
                    <fullName>Signal Validated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VigiBase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IQVIA-PSA-MC-3417</description>
        <label>VigiBase</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>